incorporating more changes for resub

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -640,3 +640,50 @@ Publisher: Nature Publishing Group},
   year={2019},
   publisher={Nature Publishing Group}
 }
+
+@article{zhu2021complexity,
+    author = {Zhu, Tianqi and Yang, Ziheng},
+    title = "{Complexity of the simplest species tree problem}",
+    journal = {Molecular Biology and Evolution},
+    volume = {38},
+    number = {9},
+    pages = {3993-4009},
+    year = {2021},
+    month = {01},
+    abstract = "{The multispecies coalescent model provides a natural framework for species tree estimation accounting for gene-tree conflicts. Although a number of species tree methods under the multispecies coalescent have been suggested and evaluated using simulation, their statistical properties remain poorly understood. Here, we use mathematical analysis aided by computer simulation to examine the identifiability, consistency, and efficiency of different species tree methods in the case of three species and three sequences under the molecular clock. We consider four major species-tree methods including concatenation, two-step, independent-sites maximum likelihood, and maximum likelihood. We develop approximations that predict that the probit transform of the species tree estimation error decreases linearly with the square root of the number of loci. Even in this simplest case, major differences exist among the methods. Full-likelihood methods are considerably more efficient than summary methods such as concatenation and two-step. They also provide estimates of important parameters such as species divergence times and ancestral population sizes,whereas these parameters are not identifiable by summary methods. Our results highlight the need to improve the statistical efficiency of summary methods and the computational efficiency of full likelihood methods of species tree estimation.}",
+    issn = {1537-1719},
+    doi = {10.1093/molbev/msab009},
+    url = {https://doi.org/10.1093/molbev/msab009},
+    eprint = {https://academic.oup.com/mbe/article-pdf/38/9/3993/39882887/msab009.pdf},
+}
+
+@article{zhu2022simulation,
+author = {Zhu, Tianqi and Flouri, Tomáš and Yang, Ziheng},
+title = {A simulation study to examine the impact of recombination on phylogenomic inferences under the multispecies coalescent model},
+journal = {Molecular Ecology},
+volume = {31},
+number = {10},
+pages = {2814-2829},
+keywords = {BPP, introgression, MSci, multispecies coalescent, recombination, species delimitation, species tree},
+doi = {https://doi.org/10.1111/mec.16433},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.16433},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/mec.16433},
+abstract = {Abstract Phylogenomic analyses under the multispecies coalescent model assume no recombination within locus and free recombination among loci. Yet, in real data sets intralocus recombination causes different sites of the same locus to have different genealogical histories so that the model is misspecified. The impact of recombination on various coalescent-based phylogenomic analyses has not been systematically examined. Here, we conduct a computer simulation to examine the impact of recombination on several Bayesian analyses of multilocus sequence data, including species tree estimation, species delimitation (by Bayesian selection of delimitation models) and estimation of evolutionary parameters such as species divergence and introgression times, population sizes for modern and extinct species, and cross-species introgression probabilities. We found that recombination, at rates comparable to estimates from the human being, has little impact on coalescent-based species tree estimation, species delimitation and estimation of population parameters. At rates 10 times higher than the human rate, recombination may affect parameter estimation, causing positive biases in introgression times and ancestral population sizes, although species divergence times and cross-species introgression probabilities are estimated with little bias. Overall, the simulation suggests that phylogenomic inferences under the multispecies coalescent model are robust to realistic amounts of intralocus recombination.},
+year = {2022}
+}
+
+@article{lanier2012recombination,
+    author = {Lanier, Hayley C. and Knowles, L. Lacey},
+    title = "{Is Recombination a Problem for Species-Tree Analyses?}",
+    journal = {Systematic Biology},
+    volume = {61},
+    number = {4},
+    pages = {691-701},
+    year = {2012},
+    month = {01},
+    abstract = "{As the field of phylogenetics transitions into phylogenomics it has spurred a shift in the general paradigm for data analysis whereby specific dataset attributes can now be considered in a model-based framework. Much effort has been put into modeling the effects of nucleotide substitution within a genealogy (i.e., modeling mutations; Felsenstein 2005) and the sorting of genes between lineages (i.e., coalescence; Knowles and Kubatko 2010), both of which are inherent properties of all species histories. Improvements in accuracy of species-tree estimation related to using models that account for these two sources of uncertainty have been well documented (Carstens and Knowles 2007; Edwards et al. 2007; Kubatko and Degnan 2007), but these are clearly not the only sources of gene-tree species-tree discordance. As the field transitions towards using multilocus data, the role of other inherent dataset properties that may be sources of uncertainty, such as intralocus recombination, needs to be examined and quantified. As all species-tree methods in current use rely on the simplifying assumption that recombination occurs between but not within loci, ignoring the presence of recombination represents a widespread and ubiquitous violation of species-tree models.}",
+    issn = {1063-5157},
+    doi = {10.1093/sysbio/syr128},
+    url = {https://doi.org/10.1093/sysbio/syr128},
+    eprint = {https://academic.oup.com/sysbio/article-pdf/61/4/691/24563814/syr128.pdf},
+}
