additional changes for resub

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -687,3 +687,14 @@ year = {2022}
     url = {https://doi.org/10.1093/sysbio/syr128},
     eprint = {https://academic.oup.com/sysbio/article-pdf/61/4/691/24563814/syr128.pdf},
 }
+
+@article{slatkin2006concordance,
+  title={The concordance of gene trees and species trees at two linked loci},
+  author={Slatkin, Montgomery and Pollack, Joshua L},
+  journal={Genetics},
+  volume={172},
+  number={3},
+  pages={1979--1984},
+  year={2006},
+  publisher={Oxford University Press}
+}
