red text change for resub

--- a/manuscript/resub-waiting-distances.tex
+++ b/manuscript/resub-waiting-distances.tex
@@ -551,7 +551,7 @@ a change to the genealogical topology (relationships).
 These can be grouped more generally into three types: 
 "no-change" (category 1), "tree-change" (categories 2-4), and "topology-change"
 (category 4). Recently, \citet{deng_distribution_2021} derived a set of solutions for
-the expected waiting distances to each of these three types of 
+the \st{expected} \textcolor{red}{distribution of} waiting distances to each of these three types of 
 outcomes for a single population with constant effective population size.
 % Although all three outcomes, and their associated waiting distances, occur 
 % implicitly between sequential genealogies within data generated under the SMC', 
@@ -3617,6 +3617,13 @@ feedback.
 % error than single population models, owing to their lower variance 
 % in tree and topology-change probabilities.
 
+\subsection{Implementation of theoretical results}
+
+\textcolor{red}{* get a species tree and gene tree
+* decompose into the embedding table
+* implement each of the key equations
+* visualize results
+Describe using these to generate the likelihood solutions.}
 
 \subsection{Investigating bias in MS-SMC predictions}
 % in addition to SMC' approximation, topo-change has additional bias.
